# ophidia-analytics-framework

./: .gitignore  .gitmodules  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  Makefile.am  NOTICE.md  README.md  bootstrap  configure.ac
etc/: oph_analytics_driver.in  oph_configuration.in  oph_dim_configuration  oph_io_server.in  oph_script_configuration  oph_soap_configuration  ophidiadb.sql  scheduler.conf.in
etc/hierarchies_xml/: OPH_BASE_hierarchy_1.0.xml  OPH_TIME_hierarchy_1.0.xml
etc/operators_xml/: OPH_AGGREGATE2_operator_1.0.xml  OPH_AGGREGATE_operator_1.0.xml  OPH_APPLY_operator_1.0.xml  OPH_B2DROP_operator_1.0.xml  OPH_CANCEL_operator_1.0.xml  OPH_CDO_operator_1.0.xml  OPH_CLUSTER_operator_1.0.xml  OPH_CONCATESDM2_operator_1.0.xml  OPH_CONCATESDM_operator_1.0.xml  OPH_CONCATNC2_operator_1.0.xml  OPH_CONCATNC_operator_1.0.xml  OPH_CONTAINERSCHEMA_operator_1.0.xml  OPH_CREATECONTAINER_operator_1.0.xml  OPH_CUBEELEMENTS_operator_1.0.xml  OPH_CUBEIO_operator_1.0.xml  OPH_CUBESCHEMA_operator_1.0.xml  OPH_CUBESIZE_operator_1.0.xml  OPH_DELETECONTAINER_operator_1.0.xml  OPH_DELETE_operator_1.0.xml  OPH_DRILLDOWN_operator_1.0.xml  OPH_DUPLICATE_operator_1.0.xml  OPH_ELSEIF_operator_1.0.xml  OPH_ELSE_operator_1.0.xml  OPH_ENDFOR_operator_1.0.xml  OPH_ENDIF_operator_1.0.xml  OPH_EXPLORECUBE_operator_1.0.xml  OPH_EXPLORENC_operator_1.0.xml  OPH_EXPORTESDM2_operator_1.0.xml  OPH_EXPORTESDM_operator_1.0.xml  OPH_EXPORTFITS_operator_1.0.xml  OPH_EXPORTNC2_operator_1.0.xml  OPH_EXPORTNC_operator_1.0.xml  OPH_FOLDER_operator_1.0.xml  OPH_FOR_operator_1.0.xml  OPH_FS_operator_1.0.xml  OPH_GENERIC_operator_1.0.xml  OPH_GET_CONFIG_operator_1.0.xml  OPH_HIERARCHY_operator_1.0.xml  OPH_IF_operator_1.0.xml  OPH_IMPORTESDM2_operator_1.0.xml  (+51 more)
etc/ophidia_dtd/: ophidiahierarchy.dtd  ophidiaoperator.dtd  ophidiaprimitive.dtd
etc/primitives_xml/: OPH_ABS_ARRAY_primitive_1.0.xml  OPH_ACCUMULATE_primitive_1.0.xml  OPH_AFFINE_primitive_1.0.xml  OPH_AGGREGATE_OPERATOR_primitive_1.0.xml  OPH_AGGREGATE_STATS_FINAL_primitive_1.0.xml  OPH_AGGREGATE_STATS_PARTIAL_primitive_1.0.xml  OPH_AGGREGATE_STATS_primitive_1.0.xml  OPH_APPEND_primitive_1.0.xml  OPH_ARG_ARRAY_primitive_1.0.xml  OPH_ARG_MAX_ARRAY_primitive_1.0.xml  OPH_ARG_MIN_ARRAY_primitive_1.0.xml  OPH_BIT_AGGREGATE_primitive_1.0.xml  OPH_BIT_CONCAT_primitive_1.0.xml  OPH_BIT_COUNT_primitive_1.0.xml  OPH_BIT_DUMP_primitive_1.0.xml  OPH_BIT_EXPORT_primitive_1.0.xml  OPH_BIT_FIND_primitive_1.0.xml  OPH_BIT_IMPORT_primitive_1.0.xml  OPH_BIT_NOT_primitive_1.0.xml  OPH_BIT_OPERATOR_primitive_1.0.xml  OPH_BIT_REDUCE_primitive_1.0.xml  OPH_BIT_REVERSE_primitive_1.0.xml  OPH_BIT_ROTATE_primitive_1.0.xml  OPH_BIT_SEQUENCE_primitive_1.0.xml  OPH_CAST_primitive_1.0.xml  (+95 more)
include/: OPH_IMPORTFITS_operator.h  debug.h  hashtbl.h  oph-lib-binary-io.h  oph_analytics_framework.h  oph_analytics_operator_library.h  oph_common.h  oph_datacube2_library.h  oph_datacube_library.h  oph_dimension_library.h  oph_directory_library.h  oph_driver_procedure_library.h  oph_esdm_library.h  oph_fits_library.h  oph_framework_paths.h  oph_gather.h  oph_hierarchy_library.h  oph_idstring_library.h  oph_input_parameters.h  oph_json_library.h  oph_license.h  oph_log_error_codes.h  oph_nc_library.h  oph_ophidiadb_main.h  oph_pid_library.h  oph_render_output_library.h  oph_sac_library.h  oph_server_confs.h  oph_server_error.h  oph_subset_library.h  oph_task_parser_library.h  oph_utility_library.h  rabbitmq_utils.h
src/: Makefile.am  debug.c  hashtbl.c  oph-lib-binary-io.c  oph_analytics_framework.c  oph_analytics_operator_library.c  oph_datacube2_library.c  oph_datacube_library.c  oph_dimension_library.c  oph_directory_library.c  oph_driver_procedure_library.c  oph_esdm_library.c  oph_fits_library.c  oph_hierarchy_library.c  oph_idstring_library.c  oph_nc_library.c  oph_pid_library.c  oph_render_output_library.c  oph_sac_library.c  oph_server_confs.c  oph_subset_library.c  oph_task_parser_library.c  oph_utility_library.c  rabbitmq_utils.c
src/clients/: Makefile.am  esdm_pav_runtime_dbmanager.c  esdm_pav_runtime_worker.c  oph_analytics_framework.c  oph_ioserver_client.c  taketime.h
src/drivers/: Makefile.am  OPH_AGGREGATE2_operator.c  OPH_AGGREGATE_operator.c  OPH_APPLY_operator.c  OPH_B2DROP_operator.c  OPH_CDO_operator.c  OPH_CONCATESDM2_operator.c  OPH_CONCATESDM_operator.c  OPH_CONCATNC2_operator.c  OPH_CONCATNC_operator.c  OPH_CONTAINERSCHEMA_operator.c  OPH_CREATECONTAINER_operator.c  OPH_CUBEELEMENTS_operator.c  OPH_CUBEIO_operator.c  OPH_CUBESCHEMA_operator.c  OPH_CUBESIZE_operator.c  OPH_DELETECONTAINER_operator.c  OPH_DELETE_operator.c  OPH_DRILLDOWN_operator.c  OPH_DUPLICATE_operator.c  OPH_EXPLORECUBE_operator.c  OPH_EXPLORENC_operator.c  OPH_EXPORTESDM2_operator.c  OPH_EXPORTESDM_operator.c  OPH_EXPORTFITS_operator.c  OPH_EXPORTNC2_operator.c  OPH_EXPORTNC_operator.c  OPH_FOLDER_operator.c  OPH_FS_operator.c  OPH_GENERIC_operator.c  OPH_HIERARCHY_operator.c  OPH_IMPORTESDM2_operator.c  OPH_IMPORTESDM_operator.c  OPH_IMPORTFITS_operator.c  OPH_IMPORTNC2_operator.c  OPH_IMPORTNC3_operator.c  OPH_IMPORTNC4_operator.c  OPH_IMPORTNC5_operator.c  OPH_IMPORTNC6_operator.c  OPH_IMPORTNCS_operator.c  (+34 more)
src/esdm_kernels/: Makefile.am  oph_esdm_kernels.c
src/ioservers/: MYSQL_ioserver.c  MYSQL_ioserver.h  Makefile.am  OPHIDIA_ioserver.c  OPHIDIA_ioserver.h  oph_ioserver_plugins_log_error_codes.h
src/oph_gsoap/: Makefile.am  oph.nsmap  oph_notify.h  oph_server_error.h  oph_soap.h  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapStub.h  stdsoap2.h
src/oph_gsoap/gsi/: gsi.c  gsi.h  oph_soap.c
src/oph_gsoap/ssl/: oph_soap.c
src/oph_ioserver/: oph_ioserver_library.c  oph_ioserver_log_error_codes.h  oph_ioserver_parser_library.c
src/oph_json/: oph_json_common.c  oph_json_graph.c  oph_json_grid.c  oph_json_multigrid.c  oph_json_text.c  oph_json_tree.c
src/ophidiadb/: oph_odb_cube_library.c  oph_odb_dimension_library.c  oph_odb_filesystem_library.c  oph_odb_job_library.c  oph_odb_metadata_library.c  oph_odb_storage_library.c  oph_odb_user_library.c  oph_ophidiadb_library.c
(+101 files in other folders)
